tests/spec/pass/list_empty.aja
items = []
print(items)
print(sort(items))
