tests/spec/fail/slice_target_invalid.aja
n = 7
print(n[0:1])
